# FRIVail

./: Cargo.toml  README.md
.sisyphus/: API_RESEARCH_REPORT.md  boulder.json
.sisyphus/notepads/frivail-dry-refactor/: wave1-results.md  wave2-results.md  wave3-results.md  wave4-results.md  wave5-results.md  wave6-results.md
.sisyphus/plans/: access-round-committed.md  comment-phase8-integration-test.md  comprehensive-refactor.md  fix-ignored-tests.md  fix-prove-with-openings.md  frivail-dry-refactor.md  friveil-pcs-api-update.md  friveil-verify-update.md  type-alias-refactor.md
benches/: commitment.rs
src/: frivail.rs  friveil.rs  kzg_proof_of_proof.rs  lib.rs  poly.rs  traits.rs  types.rs
tests/: integration_test.rs
