[package]
name = "frivail"
version = "0.2.0"
edition = "2024"


[dependencies]
binius-prover = { path = "../binius/binius64/crates/prover" }
binius-verifier = { path = "../binius/binius64/crates/verifier" }
binius-math = { path = "../binius/binius64/crates/math" }
binius-field = { path = "../binius/binius64/crates/field" }
binius-transcript = { path = "../binius/binius64/crates/transcript" }
binius-spartan-prover = { path = "../binius/binius64/crates/spartan-prover" }
binius-spartan-verifier = { path = "../binius/binius64/crates/spartan-verifier" }
binius-iop = { path = "../binius/binius64/crates/iop" }
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
] }
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = {version = "1.8", optional = true}
clap = { version = "4.0", features = ["derive"] }
digest = "0.10"
uninit = "0.6.2"
kate = { git = "https://github.com/availproject/avail-core", rev = "d33781a3b7f6817105b88057b8754df86e69f385" , optional=true}

[dev-dependencies]
divan = { version = "0.1"}
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }

[[bench]]
name = "commitment"
harness = false

[features]
default = []
parallel = ["rayon"]
kzg = ["kate"]
