[package]
name = "frivail"
version = "0.2.0"
edition = "2024"


[dependencies]
binius-prover = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
binius-verifier = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
binius-math = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
binius-field = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
binius-transcript = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
binius-spartan-prover = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
binius-spartan-verifier = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
binius-iop = { git = "https://github.com/rac-sri/binius64", rev = "f0f707beb3dc0c33124c77b78ccd3ef95bf65499" }
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
] }
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = {version = "1.8", optional = true}
clap = { version = "4.0", features = ["derive"] }
digest = "0.10"
uninit = "0.6.2"
kate = { git = "https://github.com/availproject/avail-core", rev = "d33781a3b7f6817105b88057b8754df86e69f385" , optional=true}

[dev-dependencies]
divan = { version = "0.1"}
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }

[[bench]]
name = "commitment"
harness = false

[features]
default = []
parallel = ["rayon"]
kzg = ["kate"]
